--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,15 +1,21 @@
 .filterContainer{
-    margin: 40px 0;
     background-color: rgb(241, 241, 241);
     border-radius:  10px;
-    padding: 30px;
-    box-shadow:  9px 9px 18px #cacaca
+    padding: 30px 15px;
+    box-shadow:  5px 5px 9px #cacaca
+}
+.filterContainer .heading{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+    border-bottom: 1px solid rgb(224, 224, 224);
 }
 .filterContainer h3{
     color: rgb(51, 51, 51);
     font-weight: 400;
     font-size: 25px;
-    display: inline;
 }
 .filter{
     margin: 20px 10px;
