--- a/src/scenes/Profile/Profile.module.css
+++ b/src/scenes/Profile/Profile.module.css
@@ -1,38 +1,45 @@
 /* Profile.module.css */
 
-.profile-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+.profile-page {
+    padding: 20px 20%;
     background-color: #f5f5f5;
     border-radius: 8px;
+  }
+    
+  .profile-container {
+    background-color: #007bff39;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 50px 0;
+    width: 100%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-  
-  .profile {
-    text-align: center;
+  .image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    background-color: #007bff;
+    border-radius: 15px;
   }
-  
-  .image-container {
-    position: relative;
-    max-width: 100%;
-  }
-  
   .profile-image {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
+    border: 4px solid white;
+    width: 70%;
+    border-radius: 50%;
   }
   
-  .overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fff;
+  .metadata {
+    margin-left: 50px;
   }
-  
+  .metadata h1{
+    font-size: 50px;
+  }
+  .metadata p span{
+    color: rgba(81, 81, 81, 0.585);
+  }
+
   .episode-list {
     list-style: none;
     padding: 0;
@@ -41,7 +48,7 @@
   .episode-list li {
     margin-bottom: 20px;
     padding: 10px;
-    background-color: #fff;
+    background-color: #007bff17;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
@@ -66,3 +73,34 @@
     margin: 0;
   }
   
+  @media (max-width: 1000px) {
+    .profile-page {
+      padding: 20px 10%;
+    }
+  }
+  @media (max-width: 600px) {
+    .profile-page {
+      padding: 10px 5%;
+    }      
+    .profile-container {
+      flex-direction: column-reverse;
+    }
+    .image-container{
+      height: 200px;
+      width: 100%;
+    }
+    .profile-image {
+      width: 65%;
+    }
+    .metadata {
+      margin-top: 50px;
+      text-align: center;
+      margin-left: 0;
+    }
+    .metadata h1{
+      font-size: 50px;
+    }
+    .metadata p span{
+      color: rgba(81, 81, 81, 0.585);
+    }
+  }
