--- a/src/scenes/EpisodesPage/EpisodesPage.module.css
+++ b/src/scenes/EpisodesPage/EpisodesPage.module.css
@@ -1,28 +1,35 @@
-/* Updated CSS with refined grid styling */
+.episodesPage{
+  padding: 50px 10%;
+}
 
 .episodesContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 25px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 25px;
+}
+  
+.episodeCard {
+  background-color: rgba(64, 0, 255, 0.093);
+  user-select: none;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.1s ease-in-out;
+}
+
+.episodeCard:hover {
+  cursor: pointer;
+  transform: scale(1.04);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.episodeInfo {
+  margin-top: 8px;
+}
+
+@media (max-width: 900px) {
+  .episodesPage{
+    padding: 30px 15px;
   }
-  
-  .episodeCard {
-    user-select: none;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 16px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  .episodeCard:hover {
-    cursor: pointer;
-    transform: scale(1.05);
-  }
-  
-  .episodeInfo {
-    margin-top: 8px;
-  }
-  
-  /* Optional: You can add more styling as needed */
-  
+}
