--- a/src/components/Character/CharacterCard.module.css
+++ b/src/components/Character/CharacterCard.module.css
@@ -1,23 +1,27 @@
-.container{
+/* GENERAL STYLES */
+/*width of the container depends on the outer grid size*/
+
+.container {
     position: relative;
-    height: 320x;
-    width: 200px;
+    width: 100%;
     user-select: none;
     background-color: rgb(241, 241, 241);
     cursor: pointer;
-    transition: 0.2s;
-    margin: 10px;
+    transition: transform 0.2s, box-shadow 0.2s;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 }
-.container:hover{
-    scale: 1.05;
-    box-shadow:  5px 5px 9px #cacaca
+
+.container:hover {
+    transform: scale(1.05);
+    box-shadow: 5px 5px 9px #cacaca;
 }
-.container img{
-    height: 200px;
+
+.container img {
+    width: 100%;
 }
-.container i{
+
+.container i {
     position: absolute;
     top: 15px;
     right: 0;
@@ -25,31 +29,18 @@
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     padding: 2px 10px;
-    border: 1px grey;
+    border: 1px solid grey;
     font-size: 11px;
     font-style: normal;
 }
-.metadata{
+
+.metadata {
     padding: 10px;
 }
-.metadata h5{
-    margin: 5px;
-    margin-left: 0;
-}
-.metadata p{
+
+
+.metadata p {
     color: grey;
     margin: 0;
     font-size: 13px;
 }
-
-
-@media (max-width: 500px) {
-    .container{
-        height: 260x;
-        width: 150px;
-        margin: 10px;
-    }
-    .container img{
-        height: 150px;
-    }
-} 
