--- a/src/scenes/Home/Home.module.css
+++ b/src/scenes/Home/Home.module.css
@@ -3,7 +3,8 @@
     height: 100%;
     width: 100%;
 }
-.header{
+
+.header {
     background-image: url('../../assets/bg.png');
     background-size: cover;
     background-position-y: -150px;
@@ -11,7 +12,8 @@
     height: 350px;
     width: 100%;
 }
-.overlay{
+
+.overlay {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.359);
@@ -20,7 +22,8 @@
     align-items: center;
     justify-content: center;
 }
-.overlay h1{
+
+.overlay h1 {
     color: white;
     font-size: 50px;
     font-weight: 200;
@@ -29,7 +32,7 @@
 }
 
 /* SEARCH BAR */
-.searchContainer{
+.searchContainer {
     padding: 0 30px;
     border: 1px solid grey;
     height: 60px;
@@ -41,6 +44,7 @@
     justify-content: space-between;
     color: grey;
 }
+
 .searchContainer input {
     width: 250px;
     font-size: 16px;
@@ -48,17 +52,20 @@
     outline: none;
 }
 
-.searchIcon{
+.searchIcon {
     cursor: pointer;
-    scale: 1.5;
+    transform: scale(1.5);
 }
+
 /* Tabs */
-.tabsContainer{
+.tabsContainer {
     display: flex;
     justify-content: flex-end;
     margin: 30px;
+    user-select: none;
 }
-.tabsContainer span{
+
+.tabsContainer span {
     border: 2px solid transparent;
     color: grey;
     font-size: 14px;
@@ -68,48 +75,54 @@
     letter-spacing: 2px;
     border-radius: 5px;
     cursor: pointer;
-    box-shadow:  0px 0px 5px #cacaca
+    box-shadow: 0 0 5px #cacaca;
 }
-.tabsContainer .active{
+
+.tabsContainer .active {
     background-color: orange;
     color: white;
 }
-.tabsContainer span:hover{
+
+.tabsContainer span:hover {
     border: 2px solid orange;
 }
 
 /* MAIN */
-
 @media (max-width: 800px) {
-    .header{
+    .header {
         background-size: cover;
         background-position-y: 0;
         object-fit: contain;
         height: 250px;
     }
-    .searchContainer{
-        scale: 0.7;
+
+    .tabsContainer {
+        justify-content: center;
+        margin: 20px;
+    }
+
+    .searchContainer {
+        transform: scale(0.7);
         width: 80%;
     }
-    .overlay h1{
+
+    .overlay h1 {
         font-size: 30px;
     }
-    .main{
+
+    .main {
         gap: 0;
         padding: 20px 15px;
     }
-    .tabsContainer{
+
+    .tabsContainer {
         margin: 15px;
     }
-    .tabsContainer span{
+
+    .tabsContainer span {
         font-size: 11px;
         margin: 3px;
         font-weight: 400;
         padding: 5px 10px;
     }
 }
-
-
-
-
-  
