--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -61,13 +61,56 @@
 }
 
 /*MOBILE FILTER CSS*/
-.mobileFiltersContainer{
+/* FILTER MOBILE CSS */
+.mobileFiltersContainer {
     width: 100%;
-}
-.filterIcon{
+  }
+  
+  .filterIcon {
     scale: 0.8;
     float: right;
-    padding: 8px;
+    padding: 6px;
+    margin: 4px;
     border: 1px solid grey;
     border-radius: 15px;
-}
+  }
+  
+  .mFilter {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow-y: scroll;
+    padding: 4vh 2vw;
+    backdrop-filter: blur(10px);
+    box-sizing: border-box;
+  }
+/* FILTER MOBILE CSS */
+.mobileFiltersContainer {
+    width: 100%;
+  }
+  
+  .filterIcon {
+    scale: 0.8;
+    float: right;
+    padding: 6px;
+    margin: 4px;
+    border: 1px solid grey;
+    border-radius: 15px;
+  }
+  
+  .mFilter {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow-y: scroll;
+    padding: 4vh 2vw;
+    backdrop-filter: blur(10px);
+    box-sizing: border-box;
+  }
+    
